[tool.poetry]
name = "web3mt"
version = "0.1.4"
description = "Web3 multitool"
authors = ["timertimertimer <timerkhan2002@gmail.com>"]
repository = "https://github.com/timertimertimer/web3mt"
packages = [{include = "web3mt"}]

[tool.poetry.urls]
Source = "https://github.com/timertimertimer/web3mt"

[tool.poetry.dependencies]
python = "^3.11"
web3db = { git = "https://github.com/timertimertimer/web3db.git" }
web3 = "^7.1.0"
solana = ">=0.33.0, <0.36.2"
curl-cffi = "^0.6.2"
better-proxy = "^1.1.5"
aioimaplib = "^1.1.0"
aiofiles = "^23.2.1"
aiocsv = "^1.3.2"

[tool.poetry.group.dev.dependencies]
aiohttp-proxy = "^0.1.2"
jwt = "^1.3.1"
nltk = "^3.8.1"
tweepy-self = "^1.11.0"
selenium-driverless = "^1.9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
