[tool.poetry]
name = "web3mt"
version = "0.1.12"
description = "Web3 multitool"
authors = ["timertimertimer <timerkhan2002@gmail.com>"]
repository = "https://github.com/timertimertimer/web3mt"
packages = [{ include = "web3mt" }]

[tool.poetry.urls]
Source = "https://github.com/timertimertimer/web3mt"

[tool.poetry.dependencies]
python = "^3.11"
web3db = { git = "https://github.com/timertimertimer/web3db.git" }
web3 = "^7.1.0"
solana = ">=0.33.0, <0.36.2"
curl-cffi = "^0.6.2"
better-proxy = "^1.1.5"
aioimaplib = "^1.1.0"
aiofiles = "^23.2.1"
aiocsv = "^1.3.2"
anycaptcha = "^1.5.2"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
aiohttp-proxy = "^0.1.2"
jwt = "^1.3.1"
nltk = "^3.8.1"
tweepy-self = "^1.11.0"
selenium-driverless = "^1.9.3.1"
discord-py-self = "^2.0.0"
patchright = "^1.48.0.post0"
faker = "^35.2.0"
pytz = "^2025.1"
cosmpy = "^0.9.2"
eth-keys = "^0.6.1"
aiogram = "^3.17.0"
tabulate = "^0.9.0"
g4f = {extras = ["openai"], version = "^0.4.6.1"}
aiohttp-socks = "^0.10.1"
apscheduler = "^3.11.0"
openai = "^1.66.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
