[project]
name = "web3mt"
version = "0.1.20"
description = "Web3 multitool"
authors = [{ name = "timertimertimer", email = "timerkhan2002@gmail.com" }]
requires-python = "~=3.11"
dependencies = [
    "web3db",
    "web3>=7.1.0,<8",
    "solana>=0.33.0, <0.36.2",
    "curl-cffi>=0.10.0,<0.11.4",
    "better-proxy>=1.1.5,<2",
    "aioimaplib>=1.1.0,<2",
    "aiofiles>=23.2.1,<24",
    "aiocsv>=1.3.2,<2",
    "anycaptcha>=1.5.2,<2",
    "chardet>=5.2.0,<6",
    "aptos-sdk>=0.8.6",
    "solders>=0.23.0",
    "eth-account>=0.13.7",
    "tronpy>=0.5.0",
    "bitcoinlib>=0.7.4",
    "pydantic-settings>=2.9.1",
    "bip-utils>=2.9.3",
    "bitcoinrpc>=0.7.0",
    "ruff>=0.12.1",
]

[project.urls]
Repository = "https://github.com/timertimertimer/web3mt"
Source = "https://github.com/timertimertimer/web3mt"

[dependency-groups]
dev = [
    "aiohttp-proxy>=0.1.2,<0.2",
    "jwt>=1.3.1,<2",
    "nltk>=3.8.1,<4",
    "selenium-driverless>=1.9.3.1,<2",
    "discord-py-self>=2.0.0,<3",
    "patchright>=1.48.0.post0,<2",
    "faker>=35.2.0,<36",
    "pytz~=2025.1",
    "cosmpy>=0.9.2,<0.10",
    "eth-keys>=0.6.1,<0.7",
    "aiogram>=3.17.0,<4",
    "tabulate>=0.9.0,<0.10",
    "g4f[openai]>=0.4.6.1,<0.5",
    "aiohttp-socks>=0.10.1,<0.11",
    "apscheduler>=3.11.0,<4",
    "openai>=1.66.5,<2",
    "pandas>=2.2.3,<3",
    "monero>=1.1.1",
    "pre-commit>=4.2.0",
    "redis>=6.2.0",
]

[tool.uv.sources]
web3db = { git = "https://github.com/timertimertimer/web3db.git" }

[tool.hatch.build.targets.sdist]
include = ["web3mt"]

[tool.hatch.build.targets.wheel]
include = ["web3mt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
